# dash_layout

dashboard/: pyproject.toml
dashboard/dashboard/: app.py
dashboard/dashboard/components/: navbar.py
dashboard/dashboard/pages/: home.py  not_found_404.py
dashboard/dashboard/pages/complex_page/: comp1.py  layout.py
dashboard/dashboard/utils/: images.py  settings.py
